--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,8 +1,13 @@
+<!-- /Users/2021sam/apps/BEAR/hugo/05_05_wp_conv/bear/layouts/_default/baseof.html -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <title>{{ .Title }}</title>
+  
+  <!-- Add link to custom CSS -->
+  <link rel="stylesheet" href="{{ "/css/custom.css" | relURL }}">
 </head>
 <body>
 
