--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>{{ .Title }}</title>
-</head>
-<body>
-  <h1>{{ .Title }}</h1>
-  <main>
-    {{ .Content }}
-  </main>
-</body>
-</html>
+{{ define "main" }}
+  {{ $partial := print "partials/home/" .Site.Params.homepage.layout ".html" }}
+  {{ if templates.Exists $partial }}
+    {{ partial $partial . }}
+  {{ else }}
+    {{ partial "partials/home/page.html" . }}
+  {{ end }}
+{{ end }}
