Success Congo Style - activated

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -22,7 +22,7 @@
         >{{ i18n "nav.skip_to_main" }}</a
       >
     </div>
-    {{ $header := print "partials/header/" .Site.Params.header.layout ".html" }}
+    {{ $header := print "header/" .Site.Params.header.layout ".html" }}
     {{ if templates.Exists $header }}
       {{ partial $header . }}
     {{ else }}
