--- a/layouts/partials/home/page.html
+++ b/layouts/partials/home/page.html
@@ -1,3 +1,5 @@
+<!-- /Users/2021sam/apps/BEAR/hugo/05_05_wp_conv/bear/layouts/partials/home/page.html -->
+
 <article class="prose max-w-full dark:prose-invert">
   {{ with .Title }}
     <header>
@@ -5,6 +7,7 @@
     </header>
   {{ end }}
   <section>{{ .Content | emojify }}</section>
+  ssssss
 </article>
 <section>
   {{ partial "recent-articles.html" . }}
