--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
+<!-- /Users/2021sam/apps/BEAR/hugo/05_11/hugo-swiper/layouts/_default/baseof.html -->
+
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -7,20 +9,23 @@
 
     {{- partial "head/head.html" . -}}
 
+
     <!-- Swiper CSS -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
-    <link rel="stylesheet" href="css/style.css" | relURL />
 
-    <link rel="stylesheet" href="{{ "css/swiper.css" | relURL }}">
+    <link rel="stylesheet" href="{{ "css/style.css" | relURL }}" />
 
+    <link rel="stylesheet" href="{{ "css/swiper.css" | relURL }}" />
   </head>
 
   <body class="{{ .Type }} {{ .Section }} layout-{{ .Layout }}">
     <div id="wrapper">
       {{ partial "header.html" . }}
+
+      baseof.html
 
       <main id="main">
         {{ block "main" . }}{{ end }}
@@ -29,10 +34,7 @@
       {{ partial "footer.html" . }}
     </div>
 
-    {{ partial "scripts.html" . }}
-
     <!-- Swiper JS -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     {{ block "scripts" . }}{{ end }}
   </body>
 </html>
