--- a/layouts/partials/swiper/gallery.html
+++ b/layouts/partials/swiper/gallery.html
@@ -1,55 +1,35 @@
-<div style="background: yellow">
-  layouts/partials/swiper/gallery.html partial loaded
-</div>
+<div style="background: yellow;">swiper-gallery.html partial loaded</div>
 
-{{/* Loop through all Params keys */}} {{ range $key, $val := .Params }} {{ $lk
-:= lower $key }} {{ if hasPrefix $lk "swiperimages" }} {{ $header := $val.Header
-}} {{ $desc := $val.Description }} {{ $images := $val.Images }}
+{{/* Renders all your swiperImages groups */}}
+{{/* layouts/partials/swiper/gallery.html */}}
 
-<div class="swiper-wrapper-block">
+{{ $gallery := site.Data.swipers.gallery }}
+
+{{ if not $gallery }}
+  <p style="color: red;">No gallery data found!</p>
+{{ end }}
+
+{{ if $gallery }}
+  <p style="color: blue;">Got gallery!</p>
+{{ end }}
+
+
+{{ range $key, $val := $gallery }}
   <div class="info-box">
-    <div class="info-box-media">
-      <div class="image-flip-container">
-        <div class="image-front">
-          <img src="/images/bearpawCircle-1.png" width="149" height="154" />
-        </div>
-        <div class="image-back">
-          <img src="/images/bearCircle.png" width="149" height="154" />
-        </div>
+    <h2 class="info-box-title">{{ $val.header }}</h2>
+    <p class="info-box-description">{{ $val.description }}</p>
+
+    <div class="swiper {{ $key }}">
+      <div class="swiper-wrapper">
+        {{ range $val.images }}
+          <div class="swiper-slide">
+            <img src="{{ . }}" alt="Slide from {{ $key }}" />
+          </div>
+        {{ end }}
       </div>
-    </div>
-    <div class="info-box-text">
-      <h2>{{ $header }}</h2>
-      <p>{{ $desc }}</p>
+      <div class="swiper-pagination pagination-{{ $key }}"></div>
+      <div class="swiper-button-prev prev-{{ $key }}"></div>
+      <div class="swiper-button-next next-{{ $key }}"></div>
     </div>
   </div>
-
-  <div class="swiper {{ $key }}">
-    <div class="swiper-wrapper">
-      {{ range $img := $images }}
-      <div class="swiper-slide">
-        <img src="{{ $img }}" alt="Slide from {{ $key }}" />
-      </div>
-      {{ end }}
-    </div>
-    <div class="swiper-pagination pagination-{{ $key }}"></div>
-    <div class="swiper-button-prev prev-{{ $key }}"></div>
-    <div class="swiper-button-next next-{{ $key }}"></div>
-  </div>
-
-  <script>
-    new Swiper(".{{ $key }}", {
-      loop: true,
-      pagination: {
-        el: ".pagination-{{ $key }}",
-        clickable: true,
-      },
-      navigation: {
-        nextEl: ".next-{{ $key }}",
-        prevEl: ".prev-{{ $key }}",
-      },
-    });
-  </script>
-</div>
-
-{{ end }} {{ end }}
+{{ end }}
