--- a/layouts/_default/swiper-showcase.html
+++ b/layouts/_default/swiper-showcase.html
@@ -1,8 +1,8 @@
 {{ define "main" }}
-<div style="background: lightblue; padding: 1rem">
+<!-- <div style="background: lightblue; padding: 1rem">
   Main content loaded from _default/swiper-showcase.html
   /Users/2021sam/apps/BEAR/hugo/05_19/hugo-swiper-gallery/layouts/_default/swiper-showcase.html
-</div>
+</div> -->
 
  {{ .Content }}
  {{ partial "swiper/init.html" (dict "data" "rv-service") }}
