--- a/layouts/partials/swiper/showcase.html
+++ b/layouts/partials/swiper/showcase.html
@@ -1,6 +1,6 @@
-<div style="background: blue;">
+<!-- <div style="background: blue;">
   /Users/2021sam/apps/BEAR/hugo/05_19/hugo-swiper-gallery/layouts/partials/swiper/showcase.html
-</div>
+</div> -->
 
 {{ $ctx  := .ctx }}
 {{ $data := .data }}
@@ -10,11 +10,6 @@
 {{ $show := index $all $key }}
 
 {{ if $show }}
-<div style="background: red;">
-  /Users/2021sam/apps/BEAR/hugo/05_19/hugo-swiper-gallery/layouts/partials/swiper/showcase.html
-</div>
-
-
 <section class="showcase-section showcase-{{ $idx }}">
   <div class="showcase-block" style="border: 2px solid #ccc; border-radius: 10px; padding: 1rem; margin: 1rem 0; background: #fff;">
     
