--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -14,7 +14,8 @@
     />
 
     <link rel="stylesheet" href="{{ "css/style.css" | relURL }}" />
-
+    <link rel="stylesheet" href="{{ "css/card.css" | relURL }}" />
+    <link rel="stylesheet" href="{{ "css/flipbox.css" | relURL }}" />
     <link rel="stylesheet" href="{{ "css/swiper.css" | relURL }}" />
     <link rel="stylesheet" href="{{ "css/logo-flip.css" | relURL }}" />
   </head>
