--- a/layouts/_default/welcome.html
+++ b/layouts/_default/welcome.html
@@ -6,7 +6,7 @@
 
  {{ .Content }}
 
- {{ partial "card.html" }}
+ <!-- {{ partial "card.html" }} -->
  {{ partial "swiper/init.html" (dict "data" "rv-service") }}
 
 {{ end }}
