--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -13,15 +13,19 @@
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
 
+    <link rel="stylesheet" href="{{ "css/menu.css" | relURL }}" />
     <link rel="stylesheet" href="{{ "css/style.css" | relURL }}" />
     <link rel="stylesheet" href="{{ "css/card.css" | relURL }}" />
     <link rel="stylesheet" href="{{ "css/flipbox.css" | relURL }}" />
     <link rel="stylesheet" href="{{ "css/swiper.css" | relURL }}" />
     <link rel="stylesheet" href="{{ "css/logo-flip.css" | relURL }}" />
+
   </head>
 
   <body class="{{ .Type }} {{ .Section }} layout-{{ .Layout }}">
     <div id="wrapper">
+
+      {{ partial "menu.html" . }}  <!-- ✅ Add this line -->
 
       <main id="main">
         {{ block "main" . }}{{ end }}
