--- a/layouts/_default/welcome.html
+++ b/layouts/_default/welcome.html
@@ -1,8 +1,7 @@
 {{ define "main" }}
-<div style="background: lightblue; padding: 1rem">
-  Main content loaded from _default/swiper-showcase.html
-  /Users/2021sam/apps/BEAR/hugo/05_19/hugo-swiper-gallery/layouts/_default/swiper-showcase.html
-</div>
+<!-- <div style="background: lightblue; padding: 1rem">
+  Main content loaded from _default/welcome.html
+</div> -->
 
  {{ .Content }}
 
