removed root page

--- a/layouts/_default/welcome.html
+++ b/layouts/_default/welcome.html
@@ -3,11 +3,9 @@
   Main content loaded from _default/welcome.html
 </div> -->
 
-
-
  {{ .Content }}
 
  <!-- {{ partial "card.html" }} -->
- {{ partial "swiper/init.html" (dict "data" "rv-service") }}
+ {{ partial "swiper/init.html" (dict "data" "home") }}
 
 {{ end }}
