--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="{{ "css/card.css" | relURL }}" />
     <link rel="stylesheet" href="{{ "css/flipbox.css" | relURL }}" />
     <link rel="stylesheet" href="{{ "css/swiper.css" | relURL }}" />
+    <link rel="stylesheet" href="{{ "css/swiper-large.css" | relURL }}" />
     <link rel="stylesheet" href="{{ "css/logo-flip.css" | relURL }}" />
     <link rel="stylesheet" href="{{ "css/site-logo.css" | relURL }}" />
 
