--- a/layouts/partials/swiper/slideshow copy 3.html
+++ b/layouts/partials/swiper/slideshow copy 3.html
@@ -16,12 +16,10 @@
       <div class="swiper-max {{ $key }}">
         <div class="swiper-wrapper">
           {{ range $show.images }}
-
-        <div 
-          class="swiper-slide"
-          style="background-image: url('{{ . | relURL }}')">
-        </div>
-
+            <div 
+              class="swiper-slide"
+              style="background-image: url('{{ . | relURL }}')"
+            ></div>
           {{ end }}
         </div>
         <div class="swiper-pagination pagination-{{ $key }}"></div>
@@ -32,3 +30,4 @@
 
   </section>
 {{ end }}
+
