--- a/layouts/shortcodes/info_card_gallery.html
+++ b/layouts/shortcodes/info_card_gallery.html
@@ -1,3 +1,5 @@
+<!-- /Users/2021sam/apps/BEAR/hugo/05_05_wp_conv/bear/layouts/shortcodes/info_card_gallery.html -->
+ 
 <div class="info-card-gallery" style="display: flex; flex-wrap: wrap; gap: 2rem; background: #f9fbfd; padding: 2rem; border-radius: 1rem; box-shadow: 0 4px 20px rgba(0,0,0,0.05);">
     <div class="text" style="flex: 1 1 300px; font-size: 1.25rem; line-height: 1.6;">
       {{ with .Get "title" }}<p style="font-weight: bold; margin-bottom: 1rem;">{{ . }}</p>{{ end }}
