--- a/layouts/_default/insurance.html
+++ b/layouts/_default/insurance.html
@@ -3,7 +3,7 @@
   Main content loaded from _default/swiper-showcase.html
   /Users/2021sam/apps/BEAR/hugo/05_19/hugo-swiper-gallery/layouts/_default/swiper-showcase.html
 </div> -->
-
+<link rel="stylesheet" href="/css/insurance.css">
  {{ .Content }}
  {{ partial "swiper/init.html" (dict "data" "truck-service") }}
 
