--- a/layouts/_default/insurance copy.html
+++ b/layouts/_default/insurance copy.html
@@ -1,9 +1,16 @@
+<!-- /Users/2021sam/apps/BEAR/hugo/05_05_wp_conv/bear/layouts/_default/insurance.html -->
+
 {{ define "main" }}
 <!-- <div style="background: lightblue; padding: 1rem">
   Main content loaded from _default/swiper-showcase.html
-  /Users/2021sam/apps/BEAR/hugo/05_05_wp_conv/bear/layouts/_default/insurance.html
-
+  /Users/2021sam/apps/BEAR/hugo/05_19/hugo-swiper-gallery/layouts/_default/swiper-showcase.html
 </div> -->
+<style>
+  .custom-background {
+    background-color: purple !important;
+    color: yellow !important;
+  }
+</style>
 
 <div class="custom-background">
   {{ .Content }}
@@ -25,5 +32,7 @@
     });
   });
   </script>
+  
+
 
 {{ end }}
