shortcode for about

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -25,6 +25,8 @@
     <link rel="stylesheet" href="{{ "css/site-logo.css" | relURL }}" />
     <link rel="stylesheet" href="{{ "css/insurance.css" | relURL }}" />
     <link rel="stylesheet" href="{{ "css/banner-title.css" | relURL }}" />
+    <link rel="stylesheet" href="{{ "css/testimonial-flipcard.css" | relURL }}" />
+    
 
     <style>
       nav,
