--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="{{ "css/insurance.css" | relURL }}" />
     <link rel="stylesheet" href="{{ "css/banner-title.css" | relURL }}" />
     <link rel="stylesheet" href="{{ "css/testimonial-flipcard.css" | relURL }}" />
-    
+    <link rel="stylesheet" href="{{ "css/circle.css" | relURL }}" />
 
     <style>
       nav,
