--- a/layouts/partials/testimonial-flipcard copy 2.html
+++ b/layouts/partials/testimonial-flipcard copy 2.html
@@ -4,21 +4,18 @@
   <div class="testimonial-flipcard-container">
     <div class="testimonial-flipcard-inner">
 
-    <!-- Front Side -->
-    <div class="testimonial-flipcard-front"
-    style="background: {{ .Get "frontBackground" | default "#ffffff" }};
-          color: {{ .Get "frontTextColor" | default "#000000" }};">
-    <div class="testimonial-quote">
-    <span class="quote-icon">“</span>
-    <p class="quote-text">{{ .Get "quote" | markdownify }}</p>
-    </div>
-    <div class="testimonial-author">
-    <p class="author-name">{{ .Get "name" }}</p>
-    {{ with .Get "title" }}<p class="author-title">{{ . }}</p>{{ end }}
-    {{ with .Get "company" }}<p class="author-company">{{ . }}</p>{{ end }}
-    </div>
-    </div>
-
+      <!-- Front Side -->
+      <div class="testimonial-flipcard-front">
+        <div class="testimonial-quote">
+          <span class="quote-icon">“</span>
+          <p class="quote-text">{{ .Get "quote" | markdownify }}</p>
+        </div>
+        <div class="testimonial-author">
+          <p class="author-name">{{ .Get "name" }}</p>
+          {{ with .Get "title" }}<p class="author-title">{{ . }}</p>{{ end }}
+          {{ with .Get "company" }}<p class="author-company">{{ . }}</p>{{ end }}
+        </div>
+      </div>
 
       <!-- Back Side -->
       <div class="testimonial-flipcard-back"
