--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -27,6 +27,8 @@
     <link rel="stylesheet" href="{{ "css/banner-title.css" | relURL }}" />
     <link rel="stylesheet" href="{{ "css/testimonial-flipcard.css" | relURL }}" />
     <link rel="stylesheet" href="{{ "css/circle.css" | relURL }}" />
+    <link rel="stylesheet" href="{{ "css/contact.css" | relURL }}" />
+
 
     <style>
       nav,
