--- a/static/css/contact.css
+++ b/static/css/contact.css
@@ -1,3 +1,5 @@
+/* /Users/2021sam/apps/BEAR/hugo/05_05_wp_conv/bear/static/css/contact.css */
+
 .contact-grid {
   display: grid;
   grid-template-columns: 1fr 2fr;
