--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="{{ "css/swiper-large.css" | relURL }}" />
     <link rel="stylesheet" href="{{ "css/logo-flip.css" | relURL }}" />
     <link rel="stylesheet" href="{{ "css/site-logo.css" | relURL }}" />
-    <link rel="stylesheet" href="{{ "css/insurance.css" | relURL }}" />
+    <link rel="stylesheet" href="{{ "css/collapsible-section.css" | relURL }}" />
     <link rel="stylesheet" href="{{ "css/banner-title.css" | relURL }}" />
     <link rel="stylesheet" href="{{ "css/testimonial-flipcard.css" | relURL }}" />
     <link rel="stylesheet" href="{{ "css/circle.css" | relURL }}" />
