--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,42 +2,34 @@
 
 <div id="header">
 
-    <div class="header-branding">
-        <a href="{{ "/" | relURL }}" class="header-logo-link">
-          <img src="{{ .Site.Data.globalheader.image | relURL }}"
-               alt="{{ .Site.Data.globalheader.image_alt }}"
-               class="site-logo" />
-          {{- $t := .Site.Data.globalheader.title }}
-          {{- if and (isset .Site.Data.globalheader "title") (ne $t "") }}
-            <span class="site-title">{{ $t }}</span>
-          {{- end }}
-        </a>
-      </div>
-      
+  <div class="header-branding">
+    <a href="{{ "/" | relURL }}" class="header-logo-link">
+      <img src="{{ .Site.Data.globalheader.image | relURL }}"
+           alt="{{ .Site.Data.globalheader.image_alt }}"
+           class="site-logo" />
+      {{- with .Site.Data.globalheader.title }}
+        {{ if ne . "" }}
+          <span class="site-title">{{ . }}</span>
+        {{ end }}
+      {{- end }}
+    </a>
+  </div>
 
-    <nav id="nav">
-        <ul>
-            {{- range .Site.Menus.main }}
-                <li class="{{ if or ($.Page.IsMenuCurrent "main" .) ($.Page.HasMenuCurrent "main" .) }}current{{ end }}">
-                    <a href="{{ .URL | default "#" }}">{{ .Name }}</a>
-                    {{- if .HasChildren -}}
-                    <ul>
-                        {{- range .Children }}
-                        <li class="{{ if or ($.Page.IsMenuCurrent "main" .) ($.Page.HasMenuCurrent "main" .) }}current{{ end }}">
-                            <a href="{{ .URL | default "#" }}">{{ .Name }}</a>
-                            {{- if .HasChildren -}}
-                            <ul>
-                                {{- range .Children }}
-                                <li class="{{ if or ($.Page.IsMenuCurrent "main" .) ($.Page.HasMenuCurrent "main" .) }}current{{ end }}">
-                                    {{/* aoeu fix 'current' thing */}}
-                                    <a href="{{ .URL | default "#" }}">{{ .Name }}</a>
-                                {{- end }}
-                            </ul>
-                            {{- end -}}
-                        {{- end }}
-                    </ul>
-                    {{- end -}}
-            {{- end }}
-        </ul>
-    </nav>
+  <nav class="site-menu">
+    <ul>
+      {{ range .Site.Menus.main }}
+        <li>
+          <a href="{{ .URL }}">{{ .Name }}</a>
+          {{ if .HasChildren }}
+            <ul>
+              {{ range .Children }}
+                <li><a href="{{ .URL }}">{{ .Name }}</a></li>
+              {{ end }}
+            </ul>
+          {{ end }}
+        </li>
+      {{ end }}
+    </ul>
+  </nav>
+
 </div>
