--- a/static/css/logo-flip.css
+++ b/static/css/logo-flip.css
@@ -21,8 +21,8 @@
 }
 
 .image-flip-container {
-  width: 149px;
-  height: 154px;
+  width: 150px;
+  height: 150px;
   perspective: 1000px;
 }
 
@@ -43,15 +43,23 @@
   backface-visibility: hidden;
   transition: transform 0.6s;
   position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 50%;
 }
 
 .image-front {
   z-index: 2;
 }
 
-.image-back {
+/* .image-back {
   transform: rotateY(180deg);
+} */
+
+.image-back {
+  transform: rotateY(180deg) translate(40px, 3px); /* ⬅️ Adjust X (right), Y (down) */
 }
+
 
 .image-flip-container:hover .image-front {
   transform: rotateY(180deg);
@@ -71,4 +79,14 @@
 .info-box-text p {
   font-size: 1rem;
   max-width: 600px;
+}
+
+
+.image-front,
+.image-back {
+  border: 2px dashed red;
+}
+
+.image-flip-container:hover .image-back {
+  z-index: 3;
 }
