--- a/static/css/logo-flip.css
+++ b/static/css/logo-flip.css
@@ -171,3 +171,53 @@
   display: block;
   border-radius: 50%;
 }
+
+
+
+
+
+
+
+
+.image-flip-container {
+  width: 150px;
+  height: 150px;
+  perspective: 1000px;
+  margin: 0 auto;
+}
+
+.flip-inner {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+}
+
+.image-flip-container:hover .flip-inner {
+  transform: rotateY(180deg);
+}
+
+.image-front, .image-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  border: 2px solid #444;
+  backface-visibility: hidden;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.image-front img, .image-back img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  border-radius: 50%;
+}
+
+.image-back {
+  transform: rotateY(180deg);
+}
