--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -29,6 +29,9 @@
     <link rel="stylesheet" href="{{ "css/circle.css" | relURL }}" />
     <link rel="stylesheet" href="{{ "css/contact-grid.css" | relURL }}" />
     <link rel="stylesheet" href="{{ "css/components/button.css" | relURL }}" />
+    <!-- layouts/partials/head.html or baseof.html -->
+    <link rel="stylesheet" href="{{ "css/section.css" | relURL }}">
+
 
 
     <style>
