--- a/layouts/_default/swiper-showcase-wrap.html
+++ b/layouts/_default/swiper-showcase-wrap.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
   <div class="section-wrap">
     {{ .Content }}
-    {{ partial "swiper/init.html" (dict "data" "rv-service") }}
+    {{ partial "swiper/init.html" (dict "data" .Params.data) }}
   </div>
 {{ end }}
