center & space flip cards

--- a/layouts/shortcodes/flipcard.html
+++ b/layouts/shortcodes/flipcard.html
@@ -1,3 +1,5 @@
+<!-- layouts/shortcodes/flipcard.html -->
+ 
 <a href="{{ .Get "link" | absURL }}" class="flipcard-link">
   <div class="flipcard-container">
     <div class="flipcard-inner">
