--- a/layouts/partials/head/head.html
+++ b/layouts/partials/head/head.html
@@ -24,7 +24,7 @@
   "@type": "Organization",
   "name": "Bear Collision and Service Center",
   "url": "https://cabear.com",
-  "logo": "{{ "images/logo/logo.png" | absURL }}"
+  "logo": "{{ "images/logo/BEAR.png" | absURL }}"
 }
 </script>
 
